need to resolve h2 and p gap

--- a/src/App.css
+++ b/src/App.css
@@ -10,6 +10,10 @@
     padding: 10px 15px 10px 15px;
     gap: 10px;
     background-color: #F1B23E;
+    font-family: 'Public Sans', sans-serif; 
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 25.2px;
 }
 
 .contact-btn a {
@@ -23,12 +27,16 @@
 }
 
 .about-btn {
-    max-width: 105px;
+    max-width: 147px;
     max-height: 46px;
     border-radius: 4px;
     padding: 10px 15px 10px 15px;
     gap: 10px;
     background-color:  #D5D6D7;
+    font-family: 'Public Sans', sans-serif; 
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 25.2px;
 }
 
 .about-btn a {
@@ -135,14 +143,14 @@
     border-style: dashed;
 }
 
-.HomePage .Hero .Text-Btn {
+.HomePage .Hero .text-btn {
     display: grid;
     width: 576px;
     max-height: 471px;
     gap: 32px;
 }
 
-.Hero .Text-Btn h1 {
+.Hero .text-btn h1 {
     width: 576px;
     height: 189px;
     font-family: 'Bricolage Grotesque'; 
@@ -153,7 +161,7 @@
     color: #23395B;
 }
 
-.Hero .Text-Btn h4 {
+.Hero .text-btn h4 {
     width: 576px;
     height: 118px;
     font-family: 'Public Sans', sans-serif;
@@ -163,7 +171,7 @@
     color: #23395B;
 }
 
-.Hero .Text-Btn .btn {
+.Hero .text-btn .btn {
     display: flex;
     max-width: 284px;
     max-height: 46px;
@@ -202,7 +210,7 @@
     border-style: dashed;
 }
 
-.HomePage .Numbers .Number {
+.HomePage .Numbers .number {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -213,7 +221,7 @@
     text-align: center;
 }
 
-.Numbers .Number h1 {
+.Numbers .number h1 {
     width: 120px;
     height: 63px;
     font-family: 'Bricolage Grotesque'; 
@@ -223,7 +231,7 @@
     color: #23395B;
 }
 
-.Numbers .Number p{
+.Numbers .number p{
     width: 162px;
     height: 51px;
     font-family: 'Public Sans';
@@ -249,44 +257,35 @@
 }
 
 
-.HomePage .Wills .Box {
+.HomePage .Wills .box {
     width: 568px;
     border-radius: 8px;
     padding: 48px;
     gap: 32px;
     background-color: #FFFFFF;
     position: absolute;
-
-    box-shadow: 0px 4px 4px -4px #0C0C0D0D;
-
-    box-shadow: 0px 16px 32px -4px #0C0C0D1A;
-
-
-    display: flex;
-    flex-direction: column;
-
-
-    border-color: gray;
-    border-width: 1px;
-    border-style: dashed;
 }
 
-.HomePage .Wills .Box1 {
+.HomePage .Wills .box1 {
     max-height: 524px;
     top: 0px;
     left: 0px;
+    box-shadow: 0px 4px 4px -4px #0C0C0D0D;
+    box-shadow: 0px 16px 32px -4px #0C0C0D1A;
     z-index: 1;
 }
 
-.HomePage .Wills .Box2 {
+.HomePage .Wills .box2 {
     max-height: 575px;
     top: 65px;
     left: 632px;
+    box-shadow: 0px 4px 4px -4px #0C0C0D0D;
+    box-shadow: 0px 16px 32px -4px #0C0C0D1A;
     z-index: 2;
 }
 
 
-.HomePage .Wills .Pic {
+.HomePage .Wills .pic {
     width: 125px;
     height: 125px;
     position: relative;
@@ -298,7 +297,7 @@
     background-color: transparent;
 }
 
-.Box .group {
+.box .group {
     width: 472px;
     height: 212px;
 
@@ -335,7 +334,7 @@
 }
 
 
-.Box p {
+.box p {
     width: 472px;
     height: 126px;
     font-family: 'Public Sans', sans-serif;
@@ -359,7 +358,7 @@
     ;
 }
 
-.Box a {
+.box a {
     width: 114px;
     height: 26px;
     cursor: pointer;
@@ -370,6 +369,128 @@
     line-height: 25.2px;
     color: #23395B;
 }
+
+
+.Wills .callout-box {
+    max-width: 1200px;
+    max-height: 585px;
+    background-color: #23395B;
+    border-radius: 8px;
+    padding: 64px;
+    gap: 64px;
+    position: relative;
+    top: 735px;
+    left: 0px;
+    display: flex;
+}
+
+
+.callout-box .text-btn {
+    width: 480px;
+    max-height: 457px;
+    gap: 32px;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+
+    border-color: white;
+    border-width: 1px;
+    border-style: dashed;
+}
+
+
+.callout-box .text-btn .group {
+    width: 480px;
+    height: 212px;
+
+    display: flex;
+    flex-direction: column;
+    justify-content:baseline;
+    align-items: baseline;
+
+    border-color: white;
+    border-width: 1px;
+    border-style: dashed;
+    
+}
+
+.text-btn .group p {
+    width: 335.79px;
+    height: 26px;
+    font-family: 'Public Sans', sans-serif;
+    font-weight: 500;
+    line-height: 25.2px;
+    letter-spacing: 3%;
+    color: #FFFFFF;
+
+    border-color: white;
+    border-width: 1px;
+    border-style: dashed;
+}
+
+.text-btn .group h2 {
+    width: 480px;
+    height: 162px;
+    position: relative;
+    top: 50px;
+    font-family: 'Bricolage Grotesque', sans-serif;
+    font-weight: 600;
+    font-size: 48px;
+    line-height: 54px;
+    color: #FFFFFF;
+
+
+    border-color: white;
+    border-width: 1px;
+    border-style: dashed;
+}
+
+.text-btn .group h2, .text-btn .group p {
+    margin: 0;
+    padding: 0;
+}
+
+.text-btn p{
+    width: 480px;
+    height: 135px;
+    font-family: 'Public Sans', sans-serif;
+    font-weight: 400;
+    font-size: 24px;
+    line-height: 33.6px;
+    color: #FFFFFF;
+}
+
+.callout-box img {
+    width: 528px;
+    height: 427px;
+    position: relative;
+    top: 20px;
+    left: 12px;
+    border-radius: 8px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
@@ -418,7 +539,7 @@ Form.Control {
 }
 
 
-Button {
+/* Button {
     background-color: #4CAF50;
     color: white;
     padding: 12px 20px;
@@ -427,7 +548,7 @@ Button {
     border-color: black;
     border-radius: 8px;
     cursor: pointer;
-    font-size: 16px;
+    font-size: 18px;
 }
 
 Button:hover {
@@ -436,4 +557,4 @@ Button:hover {
 
 Button[type='submit'] {
     width: 50%;
-}
+} */
